--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
         <button type="button" id="zero" class="btnLight" value="0" onclick="setText(document.getElementById('zero').value)">0</button>
         <button type="button" id="dot" class="btnLight" value="." onclick="setText(document.getElementById('dot').value)">.</button>
-        <button type="button" id="" class="btnCalc" onclick="prepareOp(document.getElementById('screen').value)">=</button>
+        <button type="button" id="" class="btnCalc" onclick="calc(document.getElementById('screen').value)">=</button>
         <button type="button" id="sum" class="btnDark" value="+" onclick="setText(document.getElementById('sum').value)">+</button>
         <br>
     </form>
