--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <br>
         <button type="button" id="e" class="btnDark" value="2.71" onclick="setText(document.getElementById('e').value)">e</button>
         <button type="button" id="tan" class="btnDark" value="tan(" onclick="setText(document.getElementById('tan').value)">tan</button>
-        <button type="button" id="root" class="btnDark" value="√(" onclick="setText(document.getElementById('root').value)">√</button>
+        <button type="button" id="root" class="btnDark" value="sq(" onclick="setText(document.getElementById('root').value)">√</button>
 
         <button type="button" id="one" class="btnLight" value="1" onclick="setText(document.getElementById('one').value)">1</button>
         <button type="button" id="two" class="btnLight" value="2" onclick="setText(document.getElementById('two').value)">2</button>
