--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <input type="radio" name="type" id="Deg" class="redioStyle"></label> -->
         <!-- merge add onclick add values add css and js -->
         <span class="toggler">
-        <button type="button" id="Rad" class="btnDark" value="" onclick="toggle()" disabled>Rad</button>
-        <button type="button" id="Deg" class="btnDark" value="" onclick="toggle()">Deg</button>
+        <button type="button" id="Rad" class="btnDark" value="" onclick="toggle()">Rad</button>
+        <button type="button" id="Deg" class="btnDark" value="" onclick="toggle()" disabled>Deg</button>
     </span>
         <button type="button" id="x!" class="btnDark" value="!" onclick="setText(document.getElementById('x!').value)">x!</button>
 
